# Chatbot

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/Com/: Com_types.h
main/Int/: Int_activate.c  Int_activate.h  Int_button.c  Int_button.h  Int_hard_codec.c  Int_hard_codec.h  Int_lcd.c  Int_lcd.h  Int_lvgl.c  Int_lvgl.h  Int_opus_decoder.c  Int_opus_decoder.h  Int_opus_encoder.c  Int_opus_encoder.h  Int_sr.c  Int_sr.h  Int_websocket.c  Int_websocket.h  Int_wifi.c  Int_wifi.h
